erDiagram
    User ||--o{ Apartment : "tenant"
    User ||--o{ Issue : "reported_by"
    User ||--o{ Issue : "assigned_to"
    User ||--o{ Post : "author"
    User }|--|| Profile : "has"
    User ||--o{ Rating : "rated_user"
    User ||--o{ Rating : "rating_user"
    User ||--o{ Report : "reported_by"
    User ||--o{ Report : "reported_user"
    User ||--o{ Reply : "author"
    Apartment ||--o{ Issue : "has"
    Post ||--o{ Reply : "has"

    User {
        UUID id
        string first_name
        string last_name
        string email
        string username
    }

    Apartment {
        string unit_number
        string building
        int floor
    }

    Issue {
        string title
        string description
        string status
        string priority
        date resolved_on
    }

    Post {
        string title
        string slug
        string body
        int upvotes
        int downvotes
    }

    Profile {
        string gender
        string bio
        string occupation
        string phone_number
        string country_of_origin
        string city_of_origin
        int report_count
        int reputation
        string slug
    }

    Rating {
        int rating
        string comment
    }

    Report {
        string title
        string slug
        string description
    }

    Reply {
        string body
    }